test/should_fail/cast_007.grg
using attrib_model_001, enum_model_001;

rule r {
	pattern {
		x: NINT;
	}
	modify {
		eval {
			x.a = (A) x.a;
		}
	}
}
